contrast fixed

--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -35,7 +35,7 @@ section img {
 }
 section p {
   font-size: 16px;
-  color: #777;
+  color: black;
   padding-bottom: 5%;
   text-align: justify;
   padding: 6%;
